UserController with tests